gitops/config/firefly/manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: firefly
  namespace: apps
  annotations:
    external-dns.alpha.kubernetes.io/hostname: finance.nieri0x73.com,finance-importer.nieri0x73.com
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: firefly-tls
      hosts:
        - finance.nieri0x73.com
        - finance-importer.nieri0x73.com
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - finance.nieri0x73.com
        - finance-importer.nieri0x73.com
