gitops/config/firefly/manifests/virtual-service-importer.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: firefly-importer
  namespace: apps
spec:
  hosts:
    - finance-importer.nieri0x73.com
  gateways:
    - firefly
  http:
    - route:
        - destination:
            host: firefly-importer
            port:
              number: 80
