gitops/config/firefly/manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: firefly
  namespace: apps
spec:
  hosts:
    - finance.nieri0x73.com
  gateways:
    - firefly
  http:
    - route:
        - destination:
            host: firefly-firefly-iii
            port:
              number: 80
